# Secure-Financial-Insights

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Makefile  pyproject.toml
backend/src/: main.py
backend/src/api/routes/: evaluation.py  health.py
backend/src/core/: config.py
backend/src/evaluation/: confidence_scorer.py  hallucination_detector.py
backend/src/models/: database.py
backend/src/rag/: vector_store.py
backend/tests/evaluation/: test_evaluation_suite.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_content_filter.py  test_schemas.py  test_sec_parser.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/documents/: page.tsx
frontend/app/evaluation/: page.tsx
frontend/app/query/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: app-shell.tsx  app-sidebar.tsx  providers.tsx  score-ring.tsx  status-badge.tsx
frontend/components/dashboard/: dashboard-content.tsx  eval-distribution-chart.tsx
frontend/components/documents/: documents-content.tsx  manual-upload-form.tsx  sec-ingest-form.tsx
frontend/components/evaluation/: evaluation-content.tsx  metrics-dashboard.tsx
frontend/components/query/: query-content.tsx  query-input-panel.tsx  query-results-panel.tsx
frontend/lib/: api.ts  store.ts  types.ts
infrastructure/docker/: Dockerfile
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/environments/dev/: terraform.tfvars.example
infrastructure/terraform/environments/prod/: terraform.tfvars.example
infrastructure/terraform/modules/ecs/: main.tf
infrastructure/terraform/modules/rds/: main.tf
monitoring/grafana/dashboards/: llm-quality.json
monitoring/prometheus/: prometheus.yml
scripts/: ingest_sample.py
src/api/: dependencies.py
src/api/routes/: documents.py  query.py
src/core/: exceptions.py  logging.py
src/document_processing/: chunker.py  sec_downloader.py  sec_parser.py
src/evaluation/: consistency_scorer.py  evaluator.py
src/guardrails/: content_filter.py  pii_redactor.py
src/llm/: client.py  prompts.py
src/models/: schemas.py
src/monitoring/: metrics.py
src/orchestration/: workflow.py
src/rag/: embeddings.py  retriever.py
tests/: conftest.py
tests/unit/: test_chunker.py  test_confidence_scorer.py  test_pii_redactor.py
(+3 files in other folders)
